2012-03-12  Bjorn Sarrazin <bjorn.sarrazin@cern.ch>
        * adding more NTUP arguments to MergeNTUP_trf 
        * Tagging as PATJobTransforms-00-03-98

2012-03-12  Bjorn Sarrazin <bjorn.sarrazin@cern.ch>
        * adding various NTUP arguments to MergeNTUP_trf 
        * Tagging as PATJobTransforms-00-03-97

2012-03-12  Junji Tojo <Junji.Tojo@cern.ch>
        * Fix typos : missing "File" after output_NTUP_XXX in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-96

2012-03-12  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_SUSYBOOSTFile and outputNTUP_SUSY34LEPFile and in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-95

2012-03-02  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_ZPRIMEMMFile in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-94

2012-02-24 Joe Tuggle <jtuggle@uchicago.edu>
        * Updated default input files to mc11 and 2011 period M data
        * Tagging as PATJobTransforms-00-03-93

2012-02-14  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_SUSYLEPTAU in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-92

2012-02-13 Steven Beale <steven.beale@physik.uni-muenchen.de>
    * Updated fastPoolMerge to use the new exit codes
    * Tagging as PATJobTransforms-00-03-91.

2012-01-26 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Tagging as PATJobTransforms-00-03-90.

2012-01-26 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Added fastPoolMerge to Merging_trf ListOfDefaultPositionalKeys

2012-01-26 Steven Beale <steven.beale@physik.uni-muenchen.de>
    * Added ValidateD3PD_trf.py transform 

2012-01-12  Junji Tojo <Junji.Tojo@cern.ch>
        * Added outputNTUP_SUSYTAG, outputNTUP_SUSYRAZOR, outputNTUP_SUSY23LEP in script/Reco_trf.py
        * Tagging as PATJobTransforms-00-03-89

2012-01-23 Steven Beale <steven.beale@physik.uni-muenchen.de>
    * Added Merging RDO files
    * Tagging as PATJobTransforms-00-03-88
